# BotProject

./: .env.example  README.md  docker-compose.yaml  start.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  redis_cache.py  service.py
backend/test/unit/: test_redis.py  test_redis_cache.py  test_service.py
bot/: Dockerfile
bot/src/: config.py  main.py
