[project]
name = "bot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "faststream[cli,kafka]>=0.5.25",
    "pydantic-settings>=2.5.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "redis>=5.1.0",
    "requests>=2.32.3",
    "structlog>=24.4.0",
    "types-requests>=2.32.0.20240914",
    "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "rich>=13.8.1",
]
